# ray-serve-benchmark

./: .gitignore  README.md  bench_serve.py  inference_server.py  pyproject.toml  ray_client.py  run.sh  sweep.sh  utils.py
results/c4_2026-03-07T02:01:48+00:00/: summary.txt
results/c4_2026-03-07T02:01:48+00:00/ray_serve_dp4_c4/: metrics.json  params.json  summary.txt
results/c4_2026-03-07T02:01:48+00:00/ray_serve_tp4_c4/: metrics.json  params.json  summary.txt
results/c4_2026-03-07T02:01:48+00:00/vllm_direct_async_dp4_c4/: metrics.json  params.json  summary.txt
results/c4_2026-03-07T02:01:48+00:00/vllm_direct_async_tp4_c4/: metrics.json  params.json  summary.txt
results/c4_2026-03-07T02:01:48+00:00/vllm_direct_sync_dp4_c4/: metrics.json  params.json  summary.txt
results/c4_2026-03-07T02:01:48+00:00/vllm_direct_sync_tp4_c4/: metrics.json  params.json  summary.txt
results/c4_2026-03-08T18:25:25+00:00/: summary.txt
results/c4_2026-03-08T18:25:25+00:00/ray_serve_dp4_c4/: metrics.json  params.json  summary.txt
results/c4_2026-03-08T18:25:25+00:00/ray_serve_tp4_c4/: metrics.json  params.json  summary.txt
results/c4_2026-03-08T18:25:25+00:00/vllm_direct_async_dp4_c4/: metrics.json  params.json  summary.txt
results/c4_2026-03-08T18:25:25+00:00/vllm_direct_async_tp4_c4/: metrics.json  (+2 more)
results/c512_2026-03-07T03:07:19+00:00/: summary.txt
results/c512_2026-03-08T19:30:36+00:00/: summary.txt
results/c64_2026-03-07T02:52:30+00:00/: summary.txt
results/c64_2026-03-08T19:15:52+00:00/: summary.txt
results/ingress_exp_2026-03-16T22:29:09+00:00/: summary.txt
(+210 files in other folders)
