[project]
name = "ray-serve-bench"
version = "0.1.0"
description = "Standalone Ray Serve vs vLLM direct benchmarking"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ray[default,serve,llm]>=2.54",
    "vllm>=0.8",
    "loguru",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends._legacy:_Backend"
