[project]
name = "ray-serve-bench"
version = "0.1.0"
description = "Standalone Ray Serve vs vLLM direct benchmarking"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ray[default,serve,llm]>=2.54",
    "vllm==0.15.1",
    "loguru",
    "boto3",
]

[dependency-groups]
dev = [
    "ruff",
    "pre-commit",
]

[tool.setuptools]
py-modules = []

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH", "RUF"]
ignore = ["T20", "D", "ANN"]
